--- a/src/App.css
+++ b/src/App.css
@@ -255,8 +255,10 @@ input, select, textarea {
 
 .banner-project .banner-title {
   font-size: 1.5rem;
-  margin-left: 6rem;
+  margin-left: 0;
   text-transform: none;
+  text-align: center;
+  width: 100%;
 }
 
 @keyframes slideTitle {
